--- a/css/styles.css
+++ b/css/styles.css
@@ -67,7 +67,7 @@ a:hover {
   padding: 40px 0;
 }
 .dsmovie-card {
-  width: 360px;
+  width: 100%;
 }
 .dsmovie-card img {
   width: 100%;
@@ -75,17 +75,20 @@ a:hover {
 }
 .dsmovie-card-description {
   background-color: var(--white);
-  padding: 10px 0 20px 0;
+  padding: 10px 20px 20px 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
   border-radius: 0 0 8px 8px;
+  max-height: 150px;
 }
 
 .dsmovie-card-description h3 {
   font-size: 14px;
   font-weight: 700;
   margin-bottom: 25px;
+  text-align: center;
 }
 
 .dsmovie-btn,
