Avaliação com estrelas

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
   --color-primary: #4d41c0;
   --white: #fff;
   --text-light-gray: #aaaaaa;
+  --star-yellow: #ffbb3a;
 }
 * {
   box-sizing: border-box;
@@ -82,7 +83,7 @@ a:hover {
   align-items: center;
   justify-content: space-between;
   border-radius: 0 0 8px 8px;
-  max-height: 150px;
+  height: 220px;
 }
 
 .dsmovie-card-description h3 {
@@ -125,6 +126,27 @@ a:hover {
   width: 100%;
 }
 
+.dsmovie-card-description-bottom {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.dsmovie-card-description-bottom h4 {
+  font-size: 16px;
+  font-weight: 700;
+  color: var(--star-yellow);
+}
+.dsmovie-card-description-bottom img {
+  width: 22px;
+}
+
+.dsmovie-card-description-bottom p {
+  font-size: 12px;
+  font-weight: 400;
+  color: var(--text-light-gray);
+  margin-bottom: 10px;
+}
 .dsmovie-form-description h3 {
   font-size: 13px;
   font-weight: 700;
