--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ a:hover {
 }
 
 #dsmovie-card-list {
-  padding: 40px 10px;
+  padding: 0 10px;
 }
 .dsmovie-card {
   width: 100%;
@@ -168,4 +168,50 @@ a:hover {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+}
+
+.dsmovie-pagination-container {
+  padding: 15px 0;
+  display: flex;
+  justify-content: center;
+}
+
+.dsmovie-pagination-box {
+  width: 180px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.dsmovie-pagination-box p {
+  margin: 0;
+  font-size: 12px;
+  font-weight: 400;
+  color: var(--color-primary);
+}
+
+.dsmovie-pagination-box button {
+  width: 40px;
+  height: 40px;
+  border: 1px solid var(--color-primary);
+  border-radius: 4px;
+  background-color: var(--white);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.dsmovie-pagination-box button img {
+  filter: brightness(0) saturate(100%) invert(25%) sepia(67%) saturate(1841%)
+    hue-rotate(229deg) brightness(92%) contrast(95%);
+}
+
+.dsmovie-pagination-box button:disabled {
+  border: 1px solid var(--text-light-gray);
+}
+
+.dsmovie-pagination-box button:disabled img {
+  filter: unset;
+}
+.dsmovie-flip-horizontal {
+  transform: rotate(180deg);
 }
